--- a/pom.xml
+++ b/pom.xml
@@ -71,4 +71,11 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>bintray-vorpal-research-kotlin-maven</id>
+            <url>http://dl.bintray.com/vorpal-research/kotlin-maven</url>
+        </repository>
+    </repositories>
+
 </project>
